--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,17 @@ layout: default
             <h2 class="subheading">{{ page.subtitle }}</h2>
             {% endif %}
             <span class="meta">Posted by
-              <a href="#">{% if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %}</a>
+              {% if post.author %}
+              <a href="{{site.author.url}}">{{site.author.name}}</a> 
+              {% if site.author.twitter %} 
+              <a href="https://x.com/{{site.author.twitter}}">(@{{site.author.twitter}})</a>
+              {% endif %}
+              {% else %}
+              <a href="{{site.author.url}}">{{site.author.name}}</a> 
+              {% if site.author.twitter %} 
+              <a href="https://x.com/{{site.author.twitter}}">(@{{site.author.twitter}})</a>
+              {% endif %}
+              {% endif %}
               on {{ page.date | date: '%B %d, %Y' }} &middot; {% include read_time.html
               content=page.content %}
             </span>
